--- a/src/core/styles/ContactInfo.css
+++ b/src/core/styles/ContactInfo.css
@@ -84,7 +84,7 @@ i {
 @media screen and (max-width:960px){
   .contact-query-post-container{
     flex-direction: column;
-    width:96%;
+    width:100%;
   }
   .contact-item-container{
     flex-direction: column;
