--- a/src/core/styles/Footer.css
+++ b/src/core/styles/Footer.css
@@ -67,8 +67,8 @@
 
 @media screen and (max-width: 820px) {
   .footer-links {
-    padding-top: 2rem;
     flex-direction: column;
+    align-items: flex-end;
   }
 
   .footer-input {
