--- a/src/core/styles/HeroSection.css
+++ b/src/core/styles/HeroSection.css
@@ -28,7 +28,7 @@
   line-height: 1.5;
   margin: 0;
   opacity: 0.7;
-  padding:0rem 2rem;
+  padding:0rem 1rem;
   text-transform: uppercase;
   text-align: center;
 }
